# okeanos

./: .gitignore  0  Cargo.toml  Justfile  Makefile  up
.cargo/: config.toml
_old/artefacts/thalassa/: Cargo.toml
_old/artefacts/theseus-device/: Cargo.toml
_old/artefacts/tinyblink/: wave.S
_old/doc/: SPI0.txt  UART.txt
_old/doc/design/: Boot Process.md  Theseus.md
_old/doc/labs/: Lab requirements.md  Oscilloscope.md
_old/doc/notes/: Memory.md  ThreadPush.md
_old/infra/: common.mk  targets.mk
_old/scratch/: mmu.rs
_old/util/xor55/: Cargo.toml
artefacts/lab4-common/: Cargo.toml
artefacts/lab4-common/src/: ir.rs  lib.rs  muart.rs  reactor.rs  relocation.rs  symbols.rs  timeouts.rs  timing.rs
artefacts/lab4-recv/: Cargo.toml
artefacts/lab4-recv/src/: lib.rs  reactor.rs  stub.rs
artefacts/lab4-send/: Cargo.toml
artefacts/lab4-send/src/: lib.rs  reactor.rs  stub.rs
artefacts/thalassa/: Cargo.toml  armv6zk-none-eabihf.json
artefacts/thalassa/.cargo/: config.toml
artefacts/thalassa/src/: arch.rs  boot.rs  lib.rs  panic.rs
artefacts/thalassa/src/arch/: barrier.rs  cpsr.rs  mem_barrier.rs  ptr.rs
artefacts/thalassa/src/boot/: labs.rs  led.rs  panic_boot.rs  redzone.rs  uart1.rs
artefacts/thalassa/src/boot/labs/: lab1.rs  lab4.rs
artefacts/theseus-common/: Cargo.toml
artefacts/theseus-common/src/: cobs.rs  lib.rs  theseus.rs
artefacts/theseus-common/src/theseus/: handshake.rs  v1.rs
artefacts/theseus-device/: Cargo.toml
artefacts/theseus-device/src/: cobs.rs  delay.rs  download.rs  fmt.rs  legacy.rs  lib.rs  muart.rs  reactor.rs  stub.rs  theseus.rs  timeouts.rs  uart1.rs
artefacts/theseus-device/src-old/: delay.rs  download.rs  fmt.rs  legacy.rs  lib.rs  staging.rs  theseus.rs  uart1.rs
artefacts/theseus-device/src-old/theseus/: v1.rs
artefacts/theseus-device/src/legacy/: fmt.rs  staging.rs  uart1.rs
artefacts/theseus-device/src/reactor/: blinken.rs  handshake.rs  v1.rs
artefacts/theseus-upload/: Cargo.toml
artefacts/theseus-upload/src/: args.rs  echo.rs  find_tty.rs  hexify.rs  io.rs  legacy.rs  main.rs  theseus.rs  tty.rs  upload.rs
artefacts/theseus-upload/src-old/: theseus.rs
artefacts/theseus-upload/src-old/theseus/: v1.rs
artefacts/theseus-upload/src/theseus/: encode.rs  v1.rs
artefacts/tinyblink/: tinyblink.S
common/okboot-common/: Cargo.toml
common/okboot-common/src/: device.rs  frame.rs  host.rs  lib.rs
common/okboot-common/src/frame/: decode.rs  encode.rs
common/okreg/: Cargo.toml
common/okreg/src/: lib.rs
common/theseus-common/src/: cobs.rs  lib.rs  theseus.rs
device/: armv6zk-none-eabihf.json
device/.cargo/: config.toml
device/antimony/: Cargo.toml  riscv64gc-unknown-none-elf.ld
device/antimony/.cargo/: config.toml
device/antimony/src/: arch.rs  critical_section.rs  lib.rs  net.rs  peripherals.rs
device/antimony/src/arch/: csr.rs  exception.rs  mem.rs  time.rs
device/antimony/src/net/: control.rs  hdlc.rs  ipcp.rs  lcp.rs  phy.rs
device/antimony/src/peripherals/: uart.rs
device/bismuth/: Cargo.toml  armv6zk-none-eabihf.ld
device/bismuth/.cargo/: config.toml
device/bismuth/src/: app.rs  arch.rs  boot.rs  exceptions.rs  fmt.rs  int.rs  kalloc.rs  lib.rs  mmu.rs  muart.rs  peripherals.rs  symbols.rs  sync.rs  thread.rs
device/bismuth/src/app/: cpuid.rs  debug.rs  dma.rs  logic_r0.rs  logic_r1.rs  smi.rs
device/bismuth/src/arch/: arm1176.rs
device/bismuth/src/arch/arm1176/: cpsr.rs  encoding.rs  lic.rs  mmu.rs  pmm.rs  sync.rs  thread.rs  timing.rs
device/bismuth/src/arch/arm1176/sync/: ticket.rs
device/bismuth/src/data/: circular_buffer.rs
device/bismuth/src/kalloc/: arena.rs  bump.rs
device/bismuth/src/peripherals/: dma.rs  smi.rs
device/bismuth/src/sync/: hybrid.rs  once.rs  seq.rs
device/dmr-client/: Cargo.toml
device/dmr-client/src/: lib.rs  request.rs
device/dmr-passthru/: Cargo.toml
device/dmr-passthru/old/: lib.rs
device/dmr-passthru/src/: lib.rs
device/dmr-server/: Cargo.toml  extern
device/dmr-server/src/: lib.rs
device/lab4-common/: Cargo.toml
device/lab4-common/src/: ir.rs  ir_gpio.rs  lib.rs  muart.rs  reactor.rs  relocation.rs  symbols.rs  timing.rs  (+1 more)
device/lab4-recv/: Cargo.toml
device/lab4-send/: Cargo.toml
device/lab7-scope/: Cargo.toml  armv6zk-none-eabihf.json
device/lab7-wave/: Cargo.toml  thalassa.ld
device/ok-registers/: Cargo.toml  design.md
device/okboot/: Cargo.toml  armv6zk-none-eabihf.json  armv6zk-none-eabihf.ld
device/okboot/src/: arch.rs  buf.rs  legacy.rs  lib.rs  protocol.rs  stub.rs  timeouts.rs
device/okboot/src/arch/: arm1176.rs  mini_uart.rs  timing.rs
device/okboot/src/arch/arm1176/: mmu.rs  pmm.rs
device/okboot/src/arch/arm1176/sync/: ticket.rs
device/okboot/src/legacy/: fmt.rs  staging.rs  uart1.rs
device/okboot/src/protocol/: handshake.rs  v2.rs
device/quartz/: Cargo.toml
device/theseus-device/: Cargo.toml
device/theseus-device/src/: legacy.rs  lib.rs  reactor.rs  stub.rs  timeouts.rs  timing.rs
device/theseus-device/src/legacy/: fmt.rs  staging.rs  uart1.rs
device/theseus-device/src/reactor/: blinken.rs  handshake.rs  rxbuf.rs  txbuf.rs  v1.rs
doc/: Easy targets.md  Exokernel.md  GPIO.txt  Mini SPI.txt  Oscilloscope.md  PAC.txt  PWM.txt  SPI0.txt  Untitled.md  WS2812B.txt  cs240lx.memmap.ld
doc/.obsidian/: workspace.json
doc/debugging/: Fell Beasts Vanquished.md
doc/design/: Theseus.md
doc/labs/: Lab requirements.md
doc/notes/: Tech Specs.md  abbreviations.md  notes-arm1176-introduction.md
doc/targets/: armv6zk-none-eabihf.md
exnihilo/: lichee.ld  lichee.mk
exnihilo/.cargo/: config.toml
host/okdude/: Cargo.toml
host/okdude/src/: echo.rs  main.rs  suboot.rs  tty.rs  upload.rs  v2.rs
host/sim/: Cargo.toml
host/theseus-upload/: Cargo.toml
host/xtask/: Cargo.toml
host/xtask/src/: main.rs
infra/: common.mk  config-common.mk  cross.mk
infra/firmware/: config.txt  kernel.img
infra/firmware-class/: config.txt
infra/linker/: default.ld
infra/scripts/: stitch-from-md.sh
infra/targets/: README.md  armv6zk-none-eabihf.md
tools/: tiny_blink.S
(+104 files in other folders)
