[package]
name = "okreg"
version = "0.1.0"
edition = "2024"

[features]
std = ["rand"]

[dependencies]
tock-registers = { path = "../../tock/libraries/tock-register-interface" }
tock-registers-derive = { path = "../../tock/libraries/tock-register-interface/derive" }

rand = { version = "0.9.0-beta.1", optional = true }
