[package]
name = "antimony"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
d1-pac = { version = "0.0.32", features = [] }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
critical-section = { version = "1.2.0", features = ["restore-state-bool"] }
embedded-alloc = { version = "0.6.0", features = ["allocator_api", "tlsf"] }
proc-bitfield = { version = "0.5.2", features = ["nightly"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["alloc", "log", "socket-udp", "socket-dhcpv4", "socket-tcp", "proto-ipv4", "medium-ip"] }
log = { version = "0.4.26", default-features = false, features = ["max_level_trace", "release_max_level_trace"] }
#http = { version = "1.3.1", default-features = false, features = [] }
httparse = { version = "1.10.1", default-features = false, features = [] }