[package]
name = "bismuth"
version = "0.1.0"
edition = "2021"

[lib]
#crate-type = ["staticlib"]

[dependencies]
bcm2835-lpa = { version = "0.4.0" }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
proc-bitfield = "0.4.0"
lock_api = "0.4.12"
#heapless = "0.8.0"
rand = { version = "0.9.0-alpha.1", default-features = false, features = ["alloc", "small_rng", "rand_chacha"] }
slice-dst = { version = "1.5.1", default-features = false, features = ["erasable"] }
volatile-register = "0.2.2"
critical-section = { version = "1.1.2", features = ["restore-state-u32"] }