[package]
name = "bismuth"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]
test = false

[dependencies]
quartz = { path = "../quartz" }
bcm2835-lpa = "0.4.0"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
embedded-alloc = "0.6.0"
critical-section = { version = "1.2.0", features = ["restore-state-u32"] }
lock_api = "0.4.12"
proc-bitfield = { version = "0.5.2", features = ["nightly"] }
volatile-register = "0.2.2"
bytemuck = "1.21.0"