[package]
name = "okboot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
bcm2835-lpa = { version = "0.4.0", features = [] }
tock-registers = { version = "0.9.0", features = ["register_types"] }

crc32fast = { version = "1.4.0", default-features = false, features = ["nightly"] }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }

okboot-common = { path = "../../common/okboot-common", default-features = false, features = [] }

musli-zerocopy = { version = "0.0.122", default-features = false }
miniz_oxide = { version = "0.7.4", default-features = false, features = [] }

error-stack = { version = "0.4.1", default-features = false, features = [] }