[package]
name = "okdude"
version = "0.1.0"
edition = "2021"

[dependencies]
okboot-common = { path = "../../common/okboot-common", features = ["std", "compress-simd", "alloc"] }

tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
clap = { version = "4.5.23", features = ["derive"] }
indicatif = { version = "0.17.9" }
nix = { version = "0.29.0", features = ["ioctl", "poll"] }
libc = { version = "0.2.169", features = [] }
serde = { version = "1.0.217" }
postcard = { version = "1.1.1", features = ["use-std"] }
clap-num = "1.1.1"
crc32fast = "1.4.2"
miniz_oxide = { version = "0.8.2" }
elf = { version = "0.7.4", features = ["std"] }